# ChangeLog for sys-auth/nss-ldapd
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  nss-ldapd-0.6.4.ebuild:
  Remove unneeded die from econf

  18 Aug 2008; Heath Caldwell (hncaldwell) <hncaldwell@csupomona.edu>
  nss-ldapd-0.6.4.ebuild:
  Added comment to clarify why library is installed to /lib.

  12 Aug 2008; Heath Caldwell (hncaldwell) <hncaldwell@csupomona.edu>
  +nss-ldapd-0.6.4.ebuild, +files/nss-ldapd-0.6.4-configure-fixes.patch,
  +files/nslcd.rc, +metadata.xml:
  New ebuild for sys-auth/nss-ldapd, bug 234555.
