@@ -2,5 +2,5 @@ AUX nslcd.rc 718 RMD160 673dc927f013f49236c09c6250bfe9a631d2730a SHA1 235df09200
 AUX nss-ldapd-0.6.4-configure-fixes.patch 4001 RMD160 bf6e83a28e77733c3026994e29a7ac558cf4e3db SHA1 5d3bba4372311566a7d2e741ee7da5e0ffd741c2 SHA256 e1a6656ed6a57dc039bb111fa26ff27674fcbf9fefd160ced140c5d27a9c8036
 DIST nss-ldapd-0.6.4.tar.gz 373022 RMD160 785e10864b77d65038de7cc21b564a0abe6c1572 SHA1 ef503f88db21390276391a44c44ce066964e03b1 SHA256 e045cf9073cc04198965cbd760401b137594d54435f90850238659f5367ef4e6
 EBUILD nss-ldapd-0.6.4.ebuild 1470 RMD160 47124dbb4bafd0d471b456c883c44d96d3ec60c5 SHA1 1b743492916c302fa9aa433e4975dea303b40c4a SHA256 163030be7ecdd04653e366d43e3da54558e07f3f0824aaecdec98bb359c746da
-MISC ChangeLog 623 RMD160 0b341533291a771c8175bd23605dc7fa0672c19b SHA1 7a2e3096bc8d6d00f1bf8831e471b10a58daa69b SHA256 b48d961d179bc7010f0314813a675fb5f8f426a817df30c34f5baac9e96de321
-MISC metadata.xml 262 RMD160 815dd5d90e8d75f89699fd9f8287bf1d232d759a SHA1 2e1cf3706969b33d98ee1f8e8a261e8efec8d750 SHA256 7760bbabbc7e9f7256183e22dd79827dbc6d141084860280002d720a588dd8c9
+MISC ChangeLog 713 RMD160 aee898cf9340257088f2bcf35a938af8e8db2440 SHA1 b9660142f01c4da11a05d74f57aa7d8dfd77d7b1 SHA256 94d66001e9732f2e687077abe9d652d4e1a86f1d6dc676f1ddd78f0ad9c04ad6
+MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
