@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>hncaldwell@csupomona.edu</email>
-		<name>Heath Caldwell</name>
-	</maintainer>
-	<herd>no-herd</herd>
+<herd>maintainer-wanted</herd>
 </pkgmetadata>
