@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Sep 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> metadata.xml:
+  Fix metadata.xml
+
   20 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
   nss-ldapd-0.6.4.ebuild:
   Remove unneeded die from econf
